# ChatServer

./: CMakeLists_vscode.txt  README.md  commmit.txt  安装boost库  安装相关的资源库
00Chat/: CMakeLists.txt
00Chat/include/: public.hpp
00Chat/include/server/: chatserver.hpp  chatwork.hpp
00Chat/include/server/db/: db.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
00Chat/src/server/: CMakeLists.txt  chatserver.cpp  chatwork.cpp  main.cpp
00Chat/src/server/db/: db.cpp  offlinemsgmodel.cpp  usermodel.cpp
02json/: a.out  out  testjson.cpp
03moduo/: !!!readme_muduo安装说明!!!.txt  muduo安装说明.txt
03moduo/00mymoduo/: 编译指令
03moduo/00mymoduo/shell_client/: client_test.sh
03moduo/01cmake_moduo/: CMakeLists.txt  编译时的命令解析.md
03moduo/01cmake_moduo/src/: cmake_moduo.cpp
03moduo/02cmake_vscode/: CMakeLists.txt
03moduo/mymoduo/: mymoduo  mymoduo.cpp  out
04nginxcode/: readme
04nginxcode/mynginx/: nginx  nginx.c
05boost/: muduo1.cpp  out
06mysql/: chat.sql  mysql.md
boost/: boost1.cpp
must_soft/: out  test.cpp
must_soft/software/: readme.txt
must_soft/software/nodejs/: readme
暂存/: 线刷过程
